--- a/dom/projects/vc8-PS3/dom.vcproj
+++ b/dom/projects/vc8-PS3/dom.vcproj
@@ -37,7 +37,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-g -O0 -Wall -fno-exceptions -fno-rtti"
+				AdditionalOptions="-g -O0 -Wall"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;..\..\include;..\..\include\1.4;&quot;..\..\external-libs\pcre&quot;;&quot;..\..\external-libs\tinyxml&quot;"
 				PreprocessorDefinitions="SN_TARGET_PS3;__CELLOS_LV2__;_DEBUG;__GCC__;DOM_INCLUDE_TINYXML;NO_BOOST;NO_ZAE"
 				ProgramDataBaseFileName="$(IntDir)\"
@@ -98,7 +98,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-O2 -Wall -fno-exceptions -fno-rtti"
+				AdditionalOptions="-O2 -Wall"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;..\..\include;..\..\include\1.4;&quot;..\..\external-libs\pcre&quot;;&quot;..\..\external-libs\tinyxml&quot;"
 				PreprocessorDefinitions="SN_TARGET_PS3;DOM_INCLUDE_TINYXML;NDEBUG;__GCC__;NO_BOOST;NO_ZAE"
 				ProgramDataBaseFileName="$(IntDir)\"
