--- a/viewer/projects/vc9-PS3/viewer.vcproj
+++ b/viewer/projects/vc9-PS3/viewer.vcproj
@@ -39,7 +39,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-g -Wall -fno-exceptions -fno-rtti"
+				AdditionalOptions="-g -Wall"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include\psgl&quot;;..\..\..\fx\include;..\..\..\rt\include;."
 				PreprocessorDefinitions="SN_TARGET_PS3;_DEBUG;__GCC__;PSGL;__CELLOS_LV2__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;;NO_BULLET"
 				ProgramDataBaseFileName="$(IntDir)\"
@@ -57,7 +57,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="-fno-exceptions -fno-rtti"
+				AdditionalOptions="-fno"
 				AdditionalDependencies="&quot;$(SN_PS3_PATH)\ppu\lib\sn\libsn.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libm.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libio_stub.a&quot; &quot;$(SCE_PS3_ROOT)\samples\fw\libfw.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGLFX.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGL.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGLU.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGLcgc.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libcgc.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libgcm_cmd.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libgcm_sys_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libsysmodule_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libresc_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libusbd_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libfs_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libsysutil_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libdbgfont.a&quot; ..\..\..\dom\build\vc9-PS3-d\dom-d.lib ..\..\..\fx\build\vc9-PS3-d\fx-d.lib ..\..\..\rt\build\vc9-PS3-d\rt-d.lib ..\..\..\dom\external-libs\tinyxml\lib\ps3\libtinyxml.a ..\..\..\dom\external-libs\pcre\lib\ps3\libpcrecpp.a ..\..\..\dom\external-libs\pcre\lib\ps3\libpcre.a"
 				OutputFile="$(OutDir)/$(ProjectName)-d.ppu.elf"
 				LinkIncremental="0"
@@ -115,7 +115,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-O2 -Wall -fno-exceptions -fno-rtti"
+				AdditionalOptions="-O2 -Wall"
 				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include\psgl&quot;;..\..\..\fx\include;&quot;..\..\..\rt\external-libs\bullet\src&quot;;..\..\..\rt\include;."
 				PreprocessorDefinitions="SN_TARGET_PS3;NDEBUG;__GCC__;PSGL;__CELLOS_LV2__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;;NO_BULLET"
 				ProgramDataBaseFileName="$(IntDir)\"
@@ -133,7 +133,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="-fno-exceptions -fno-rtti"
+				AdditionalOptions="-fno"
 				AdditionalDependencies="&quot;$(SN_PS3_PATH)\ppu\lib\sn\libsn.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libm.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libio_stub.a&quot; &quot;$(SCE_PS3_ROOT)\samples\fw\libfw.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\opt\libPSGLFX.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\opt\libPSGL.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\opt\libPSGLU.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\opt\libPSGLcgc.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libcgc.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libgcm_cmd.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libgcm_sys_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libsysmodule_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libresc_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libusbd_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libfs_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libsysutil_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libdbgfont.a&quot; ..\..\..\dom\build\vc9-PS3\dom.lib ..\..\..\fx\build\vc9-PS3\fx.lib ..\..\..\rt\build\vc9-PS3\rt.lib ..\..\..\dom\external-libs\tinyxml\lib\ps3\libtinyxml.a ..\..\..\dom\external-libs\pcre\lib\ps3\libpcrecpp.a ..\..\..\dom\external-libs\pcre\lib\ps3\libpcre.a"
 				OutputFile="$(OutDir)/$(ProjectName).ppu.elf"
 				LinkIncremental="0"
