--- a/viewer/projects/vc8-PS3/viewer.vcproj
+++ b/viewer/projects/vc8-PS3/viewer.vcproj
@@ -39,8 +39,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-g -Wall"
-				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include\psgl&quot;;..\..\..\fx\include;..\..\..\rt\include;."
-				PreprocessorDefinitions="SN_TARGET_PS3;_DEBUG;__GCC__;PSGL;__CELLOS_LV2__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;;NO_BULLET"
+				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include\psgl&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include\vectormath\cpp&quot;;..\..\..\fx\include;..\..\..\rt\include"
+				PreprocessorDefinitions="SN_TARGET_PS3;_DEBUG;__GCC__;PSGL;__CELLOS_LV2__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;"
 				ProgramDataBaseFileName="$(IntDir)\"
 				DebugInformationFormat="0"
 				CompileAs="0"
@@ -56,12 +56,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="&quot;$(SN_PS3_PATH)\ppu\lib\sn\libsn.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libm.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libio_stub.a&quot; &quot;$(SCE_PS3_ROOT)\samples\fw\libfw.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGLFX.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGL.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGLU.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGLcgc.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libcgc.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libgcm_cmd.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libgcm_sys_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libsysmodule_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libresc_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libusbd_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libfs_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libsysutil_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libdbgfont.a&quot; ..\..\..\dom\build\vc8-PS3-d\dom-d.lib ..\..\..\fx\build\vc8-PS3-d\fx-d.lib ..\..\..\rt\build\vc8-PS3-d\rt-d.lib ..\..\..\dom\external-libs\tinyxml\lib\ps3\libtinyxml.a ..\..\..\dom\external-libs\pcre\lib\ps3\libpcrecpp.a ..\..\..\dom\external-libs\pcre\lib\ps3\libpcre.a"
+				AdditionalDependencies="&quot;$(SN_PS3_PATH)\ppu\lib\sn\libsn.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libm.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libio_stub.a&quot; &quot;$(SCE_PS3_ROOT)\samples\fw\libfw.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGLFX.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGL.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGLU.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\PSGL\RSX\debug\libPSGLcgc.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libcgc.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libgcm_cmd.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libgcm_sys_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libsysmodule_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libresc_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libusbd_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libfs_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libsysutil_stub.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libdbgfont.a&quot; &quot;$(SCE_PS3_ROOT)\target\ppu\lib\libspurs_stub.a&quot; ..\..\..\dom\build\vc8-PS3-d\dom-d.lib ..\..\..\fx\build\vc8-PS3-d\fx-d.lib ..\..\..\rt\build\vc8-PS3-d\rt-d.lib ..\..\..\dom\external-libs\tinyxml\lib\ps3\libtinyxml.a ..\..\..\dom\external-libs\pcre\lib\ps3\libpcrecpp.a ..\..\..\dom\external-libs\pcre\lib\ps3\libpcre.a"
 				OutputFile="$(OutDir)/$(ProjectName)-d.ppu.elf"
 				LinkIncremental="0"
 				AdditionalLibraryDirectories=""
 				GenerateManifest="false"
 				ProgramDatabaseFile=""
+				ImportLibrary=""
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -115,8 +116,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-O2 -Wall"
-				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include\psgl&quot;;..\..\..\fx\include;&quot;..\..\..\rt\external-libs\bullet\src&quot;;..\..\..\rt\include;."
-				PreprocessorDefinitions="SN_TARGET_PS3;NDEBUG;__GCC__;PSGL;__CELLOS_LV2__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;;NO_BULLET"
+				AdditionalIncludeDirectories="&quot;$(SN_PS3_PATH)\ppu\include\sn&quot;;&quot;$(SCE_PS3_ROOT)\target\ppu\include&quot;;&quot;$(SCE_PS3_ROOT)\target\common\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include&quot;;&quot;$(SCE_PS3_ROOT)\samples\fw\include\psgl&quot;;..\..\..\fx\include;&quot;..\..\..\rt\external-libs\bullet\src&quot;;..\..\..\rt\include"
+				PreprocessorDefinitions="SN_TARGET_PS3;NDEBUG;__GCC__;PSGL;__CELLOS_LV2__;CFX_PLATFORM_INCLUDE=\&quot;cfxPS3.h\&quot;;CRT_PLATFORM_INCLUDE=\&quot;CrtPS3.h\&quot;"
 				ProgramDataBaseFileName="$(IntDir)\"
 				DebugInformationFormat="0"
 				CompileAs="0"
@@ -192,6 +193,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath="..\..\..\..\..\bullet-2.73\out\debug8_ps3\libs\PS3_SPURS_BulletCD_spu.ppu.obj"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
